- Google Map API - Google ReCaptcha

--- a/SpringSecuritySocial/src/main/resources/messages/messages_en.properties
+++ b/SpringSecuritySocial/src/main/resources/messages/messages_en.properties
@@ -1,4 +1,4 @@
-home.hello=Hello
+home.hello=Hello {0} {1}
 home.userSession=User Session
 home.socialStatus=Social Status
 home.facebookProfile=Facebook Profile
@@ -6,3 +6,5 @@ home.twitterProfile=Twitter Profile
 home.logout=Logout
 home.login=Login
 home.register=Register
+
+register.captchaBlank=Please check out the captcha to proceed.
