--- a/SpringSecuritySocial/src/main/resources/messages/messages_in.properties
+++ b/SpringSecuritySocial/src/main/resources/messages/messages_in.properties
@@ -1,4 +1,4 @@
-home.hello=Selamat datang
+home.hello=Selamat datang {0} {1}
 home.userSession=Session Pengguna
 home.socialStatus=Status Media Sosial
 home.facebookProfile=Profil Facebook
@@ -6,3 +6,5 @@ home.twitterProfile=Profil Twitter
 home.logout=Logout
 home.login=Login
 home.register=Daftar Pengguna
+
+register.captchaBlank=Silahkan klik captcha untuk melanjutkan proses pendaftaran.
